--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="return-location hidden">
+                <div class="return-location mobi-hidden">
                     <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                          fill="none">
                         <path d="M11 13H5V11H11V5H13V11H19V13H13V19H11V13Z" fill="#8A9197"/>
